[package]
name = "gozo"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
async-nats = "0.34"
bytes = "1.6"
dotenv = "0.15"
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
