[package]
name = "gozo"
version = "0.1.0"
edition = "2021"
description = "Message scheduler for NATS."
readme = "README.md"
repository = "https://codeberg.org/gblach/gozo"
license = "MPL-2.0"
keywords = ["nats", "client", "messaging", "scheduler"]
categories = ["network-programming", "date-and-time"]

[dependencies]
argh = "0.1"
async-nats = "0.34"
bytes = "1.6"
ctrlc = { version = "3.4", features = ["termination"] }
dotenv = "0.15"
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
