[package]
name = "gozo"
version = "0.1.1"
edition = "2021"
description = "Message scheduler for NATS."
readme = "README.md"
repository = "https://codeberg.org/gblach/gozo"
license = "MPL-2.0"
keywords = ["nats", "client", "messaging", "scheduler"]
categories = ["network-programming", "date-and-time"]

[dependencies]
argh = "0.1"
async-nats = "0.35"
bytes = "1.6"
ctrlc = { version = "3.4", features = ["termination"] }
dotenvy = "0.15"
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
strip = "symbols"
lto = "thin"
